Fixed some warning in ProblemProvider